style: correct space between tasksand alignment of each task.

--- a/src/components/CheckboxItem/CheckBoxItem.module.css
+++ b/src/components/CheckboxItem/CheckBoxItem.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: .5rem;
 }
 
 .textInput {
@@ -12,7 +13,6 @@
 
     border: none;
     border-radius: 5px;
-    margin-top: 10px;
     padding: .5rem;
     width: 50%;
 }
