--- a/src/components/CheckboxList/CheckboxList.module.css
+++ b/src/components/CheckboxList/CheckboxList.module.css
@@ -1,7 +1,6 @@
 .list {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 
     height: 200px; 
     width: 70%;
